body overflow fix

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -12,24 +12,20 @@
 	@font-face {
 		font-family: 'AgrandirGrandHeavy';
 		src:url('./assets/fonts/Agrandir/Agrandir-GrandHeavy.otf')
-	}
-
-  /* @font-face {
-    font-family: 'Fredoka';
-    src:url('https://fonts.googleapis.com/css2?family=Fredoka:wght@500&display=swap')
-  } */
+	} 
 }
 
 body {
 	margin: 0;
-  font-family: 'Fredoka', sans-serif;
-	/* font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-		'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
-	-webkit-font-smoothing: antialiased;
-	-moz-osx-font-smoothing: grayscale; */
-	/* width: 100%; */
+  font-family: 'Fredoka', sans-serif; 
 	height: 100%;
 	background-color: #008eff;
+  overflow-x: hidden;
+}
+
+h3{
+  word-break: break-all;
+  /* word-wrap: break-word; */
 }
 
 * {
